# comtrya

./: .editorconfig  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  README.md  check.ps1  check.sh  deny.toml  shell.nix
.github/: pull_request_template.md  release-drafter.yml  release-notes-configuration.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-drafter/: config.yaml
.github/workflows/: main.yaml  main.yml  main2.yaml  mdbook-pr.yml  mdbook.yml  pull-request.yaml  release-notes.yaml  release.yaml  release.yml
.trunk/: trunk.yaml
app/: Cargo.toml
app/src/: main.rs
app/src/commands/: apply.rs  contexts.rs  gen_completions.rs  mod.rs  plugin.rs  version.rs
app/src/config/: mod.rs
app/src/utils/: dependency_graph.rs  mod.rs
app/tests/: README.md  basic_usage.rs
app/tests/utils/: mod.rs
application/: Cargo.toml
application/examples/file/: file-download.yaml  walk.yaml
application/examples/http/: download.yaml
application/src/: main.rs
application/src/atoms/: mod.rs
application/src/config/: mod.rs
docs/: book.toml  pull_request_template.md
docs/src/: SUMMARY.md  actions.md  binary.md  cli.md  command.md  commands.md  dependencies.md  files-and-directories.md  git.md  group.md  installation.md  introduction.md  macos.md  manifests.md  packages.md  plugin.md  privileged.md  supported-systems.md  user.md  variants.md
dotfiles/: comtrya.yaml
dotfiles/modules/: jq.yaml  kubernetes.yaml
dotfiles/modules/git/: gitconfig  main.yaml
example_plugin/: Cargo.toml
example_plugin/src/: lib.rs
examples/: Comtrya.yaml
examples/binary/: github.yaml  unarchive.yaml
examples/command/: run.yaml
examples/directory/: create.yaml  directoryremove.yaml  remove.yaml
examples/directory/copy/: dircopy.yaml  main.yaml
examples/file/: copy.yaml  file-chown.yaml  file-download-chown.yaml  file-unarchive.yaml  filecopy.yaml  fileremove.yaml
examples/file/files/: some-file
examples/git/: clone.yaml
examples/group/: add_to_group.yaml  group.yaml
examples/labels/: label.yaml
examples/macos/: defaults.yaml
examples/onlyvariants/: main.yaml
examples/package/: install.yaml
examples/plugin/: README.md  echo.lua  echo.yaml  plugin.lua  plugin.yaml
examples/plugins/: plugins.yaml
examples/toml-examples/command/: command.toml
examples/user/: adduser.yaml  user.yaml
examples/variables/: variables.yaml
examples/where/: main.yaml
jsonschemagen/: .gitignore  Cargo.toml  schema.json
jsonschemagen/.build/: _redirects
jsonschemagen/src/: main.rs
lib/: Cargo.toml  LICENSE
lib/src/: lib.rs
lib/src/actions/: mod.rs
lib/src/actions/binary/: github.rs  github_archive.rs  mod.rs
lib/src/actions/command/: run.rs
lib/src/actions/directory/: copy.rs  create.rs  mod.rs  remove.rs
lib/src/actions/file/: chown.rs  copy.rs  download.rs  link.rs  mod.rs  remove.rs  unarchive.rs
lib/src/actions/git/: clone.rs
lib/src/actions/group/: add.rs  add_user.rs  mod.rs
lib/src/actions/group/providers/: freebsd.rs  linux.rs  macos.rs  mod.rs  none.rs  none.rs~
lib/src/actions/macos/: default.rs  mod.rs
lib/src/actions/package/: install.rs  mod.rs  repository.rs
lib/src/actions/package/providers/: aptitude.rs  bsdpkg.rs  dnf.rs  homebrew.rs  luarocks.rs  macports.rs  mod.rs  paru.rs  pkgin.rs  snapcraft.rs  winget.rs  xbps.rs  yay.rs  zypper.rs
lib/src/actions/plugin/: globals.rs  mod.rs  plugin.rs  plugin_spec.rs
lib/src/actions/plugins/: mod.rs
lib/src/actions/user/: add.rs  add_group.rs  mod.rs
lib/src/actions/user/providers/: freebsd.rs  linux.rs  macos.rs  mod.rs  none.rs  openbsd.rs
lib/src/actions/user/userproviders/: freebsd.rs  mod.rs  none.rs
lib/src/atoms/: mod.rs
lib/src/atoms/command/: exec.rs
lib/src/atoms/directory/: create.rs  mod.rs  remove.rs
lib/src/atoms/file/: chmod.rs  chown.rs  contents.rs  copy.rs  create.rs  decrypt.rs  link.rs  mod.rs  remove.rs  unarchive.rs
lib/src/atoms/git/: clone.rs
lib/src/atoms/http/: download.rs  mod.rs
lib/src/atoms/plugin/: exec.rs  globals.rs  mod.rs  plugin_spec.rs
lib/src/atoms/plugins/: mod.rs
lib/src/config/: mod.rs
lib/src/contexts/: env.rs  mod.rs  os.rs  privilege.rs  user.rs  variables.rs
lib/src/contexts/variable_include/: dns.rs  doppler.rs  file.rs  mod.rs
lib/src/contexts/variables_source/: dns.rs  mod.rs
lib/src/manifests/: load.rs  mod.rs
lib/src/manifests/providers/: git.rs  local.rs  mod.rs
lib/src/plugins/: mod.rs
lib/src/steps/: mod.rs
lib/src/steps/finalizers/: env_vars_remove.rs  mod.rs  output_contains.rs
lib/src/steps/initializers/: command_found.rs  env_vars_set.rs  file_exists.rs  mod.rs
lib/src/tera_functions/: mod.rs
lib/src/utilities/: lua.rs  mod.rs  password_manager.rs
lib/src/values/: mod.rs
opt/get.comtrya.dev/: index.html  ps.html
plugins/: Cargo.toml
plugins/src/: lib.rs
src/: main.rs  manifest.rs
src/actions/: command.rs  mod.rs
src/actions/binary/: github.rs
src/actions/command/: mod.rs  run.rs
src/actions/directory/: copy.rs  create.rs  mod.rs
src/actions/file/: copy.rs  download.rs  link.rs  mod.rs
src/actions/git/: clone.rs  mod.rs
src/actions/package/: install.rs  mod.rs  repository.rs
src/actions/plugin/: mod.rs
src/actions/user/: add.rs  mod.rs
src/atoms/: mod.rs
src/atoms/command/: exec.rs  mod.rs  run.rs
src/atoms/directory/: create.rs  mod.rs
src/atoms/file/: chmod.rs  chown.rs  contents.rs  copy.rs  create.rs  link.rs  mod.rs
src/atoms/finalizers/: mod.rs  output_contains.rs
src/atoms/git/: clone.rs
src/atoms/http/: download.rs
src/atoms/initializers/: command_found.rs  mod.rs
src/atoms/plugin/: mod.rs
src/commands/: apply.rs  mod.rs  version.rs
src/config/: mod.rs
src/contexts/: env.rs  mod.rs  os.rs  user.rs  variables.rs
src/files/: mod.rs
src/manifests/: load.rs  mod.rs
src/modules/: mod.rs
src/plugins/: mod.rs
src/steps/: mod.rs
src/tera_functions/: mod.rs
src/utils/: command.rs
tests/: README.md  basic_usage.rs  utils.rs
(+40 files in other folders)
