[package]
name = "comtrya"
version = "0.1.0"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2018"
license = "MIT"
description = "A tool to simplify reprovisioning a fresh OS. Installs packages and manages dotfiles."

[dependencies]
petgraph = "0.5.1"
os_info = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
tera = "1"
walkdir = "2"
