[package]
name = "comtrya"
version = "0.6.8"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2018"
license = "MIT"
description = "A tool to simplify reprovisioning a fresh OS. Installs packages and manages dotfiles."

[dependencies]
anyhow = "1.0.39"
dirs-next = "2.0.0"
eval = "0.4.3"
file_diff = "1.0.0"
fs_extra = "1.2.0"
gitsync = "0.1.6"
ignore = "0.4.17"
openssl = { version = "0.10", features = ["vendored"] }
# Pending PR: https://github.com/stanislav-tkach/os_info/pull/250/files
os_info = { version = "3.0.1", git = "https://github.com/rawkode/os_info", branch = "fix/serde-deserialize" }
petgraph = "0.5.1"
regex = "1"
reqwest = { version = "0.11.1", default-features = false, features = [
    "blocking",
    "rustls-tls"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8"
structopt = "0.3"
tera = "1"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
walkdir = "2"
which = "4.0.2"
whoami = "1.1.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.2.0"
assert_cmd = "1.0.3"
predicates = "1.0.7"
assert_fs = "1.0.0"
