[package]
name = "comtrya"
version = "0.9.1"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2021"
license = "MIT"
description = "A tool to simplify reprovisioning a fresh OS. Installs packages and manages dotfiles."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
colored = "2.1"
comfy-table = "7"
comtrya-lib = { path = "../lib", version = "0.9.1" }
petgraph = "0.6"
rhai = { version = "1.19", features = ["serde"] }
strip-ansi-escapes = "0.2"
tracing = "0.1"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3"
update-informer = "1.1"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0"
tokio = { version = "1.43.0", features = ["full"] }
crossbeam-queue = "0.3.12"
yapp = "0.4.1"
zeroize = { version = "1.8.1", features = ["derive", "std"] }
rpassword = "7.3.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
