[package]
name = "comtrya-lib"
version = "0.9.2"
authors = ["David McKay <david@rawkode.dev>"]
edition = "2021"
license = "MIT"
description = "Contains the interfaces for comtrya plugins"

[dependencies]
anyhow = "1.0"
age = { version = "0.11", features = ["armor"] }
dirs-next = "2.0"
file_diff = "1.0"
gethostname = "1.1"
ignore = "0.4"
normpath = "1.5"
octocrab = "0.49"
os_info = { version = "3.14", features = ["schemars"] }
petgraph = "0.8"
rand = "0.10"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "rustls",
] }
rhai = { version = "1.24", features = ["serde"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sha256 = "1.6"
tokio = "1.49"
toml = "1.0"
tera = "1.20"
tracing = "0.1"
trust-dns-resolver = "0.23.2"
walkdir = "2.5"
which = "8.0"
whoami = "2.1"
tar = "0.4.44"
flate2 = "1.1.9"
file-owner = "0.1.2"
gix = { version = "0.80.0", features = [
    "status",
    "tracing",
    "tracing-detail",
    "blocking-http-transport-reqwest-rust-tls",
    "blocking-network-client",
] }
gix-protocol = "0.58.0"
tealr = { version = "0.10.0", features = [
    "mlua_lua54",
    "mlua_anyhow",
    "mlua_async",
    "mlua_userdata-wrappers",
    "tealr_derive",
    "mlua_send",
    "mlua_serialize",
    "mlua",
    "mlua_error-send",
    "mlua_macros",
    "mlua_vendored",
] }
camino = { version = "1.2.2", features = ["serde1"] }
serde_with = { version = "3.17.0", features = ["schemars_1", "json"] }
parking_lot = "0.12.5"

[target.'cfg(unix)'.dependencies]
uzers = "0.12"

[dev-dependencies]
tempfile = "3.26"
pretty_assertions = "1.4"
